--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,21 +6,21 @@ authors = ["Yuta Saito <ys552@cornell.edu>"]
 license = "Apache License 2.0"
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<3.13"
-torch = "^1.9.0"
-scikit-learn = "^1.0.2"
-pandas = "^1.3.5"
-numpy = "^1.21.2"
-matplotlib = "^3.4.3"
-tqdm = "^4.62.2"
-scipy = "~1.9.3"
+python = ">=3.10,<3.13"
+torch = "2.6.0"
+scikit-learn = "1.6.1"
+pandas = "^2.1.0"
+numpy = "^1.25.0"
+matplotlib = "^3.8.0"
+tqdm = "^4.65.0"
+scipy = "~1.15.2"
 PyYAML = "^6.0.1"
-seaborn = "~0.12.2"
+seaborn = "^0.12.2"
 pyieoe = "^0.1.1"
 pingouin = "^0.4.0"
 mypy-extensions = "^0.4.3"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 flake8 = "^3.9.2"
 black = "22.1.0"
 pytest = "^6.2.5"
@@ -31,13 +31,13 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.isort]
-profile = 'black'
-src_paths = ['obp', 'tests', 'examples', 'benchmark']
+profile = "black"
+src_paths = ["obp", "tests", "examples", "benchmark"]
 line_length = 88
 lines_after_imports = 2
-force_single_line = 'True'
-force_sort_within_sections = 'True'
-order_by_type = 'False'
+force_single_line = true
+force_sort_within_sections = true
+order_by_type = false
 
 [tool.pytest.ini_options]
 addopts = "--color=yes"
