--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ license = "Apache License 2.0"
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
 torch = "2.6.0"
-scikit-learn = "1.6.1"
+scikit-learn = "^1.5.2"
 pandas = "^2.1.0"
 numpy = "^1.25.0"
 matplotlib = "^3.8.0"
